# bowling_game

./: CMakeLists.txt  README.md
inc/: CBowlingGame.hpp
src/: CBowlingGame.cpp  main.cpp
